<resources>
    <string name="app_name">Android Academy Homework</string>
    <string name="android_academy_homework">Android Academy Homework</string>
    <string name="movie_details">Movie Details</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="_13plus">13+</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="star">star</string>
    <string name="_125_reviews">125 Reviews</string>
    <string name="image">image</string>
    <string name="storyline">Storyline</string>
    <string name="after_the_dev">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="r_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="back">Back</string>
    <string name="combined_shape" translatable="false">combined_shape</string>
    <string name="movies_list">Movies list</string>
    <string name="ratio_13plus" translatable="false">13+</string>
    <string name="like" translatable="false">like</string>
    <string name="min">137 min</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>