<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:forceDarkAllowed="false"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <ImageView
            android:id="@+id/mask"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/avengers_end_game"
            android:contentDescription="@string/avengers_end_game"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.302"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ratio"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/_13plus"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:lineHeight="40sp"
            android:lineSpacingExtra="0sp"
            android:text="@string/avengers_end_game"
            android:textAppearance="@style/avengers_end_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mask" />

        <TextView
            android:id="@+id/movie_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/action_adventure_fantasy"
            android:textColor="@color/tag_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:numStars="5"
            android:theme="@style/ratingBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_tag" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="78dp"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/_125_reviews"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toBottomOf="@+id/movie_tag" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <TextView
            android:id="@+id/storyline_name"
            style="@style/storyline_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/storyline"
            android:textAppearance="@style/storyline_name"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/ratingBar" />

        <TextView
            android:id="@+id/storyline_text"
            style="@style/after_the_d"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.75"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/after_the_dev"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/storyline_name" />

        <TextView
            android:id="@+id/cast_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:lineHeight="24sp"
            android:text="@string/cast"
            android:textAppearance="@style/cast_name"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/storyline_text" />

        <ImageView
            android:id="@+id/robert_down_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/r_downey_jr"
            android:scaleType="centerCrop"
            android:src="@drawable/robert_downey_jr"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/chris_evans_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast_name"
            tools:srcCompat="@drawable/robert_downey_jr" />

        <ImageView
            android:id="@+id/chris_evans_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/chris_evans"
            android:scaleType="centerCrop"
            android:src="@drawable/chris_evans"

            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/mark_ruffalo_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/robert_down_image"
            app:layout_constraintTop_toBottomOf="@+id/cast_name"
            tools:srcCompat="@drawable/chris_evans" />

        <ImageView
            android:id="@+id/mark_ruffalo_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/mark_ruffalo"
            android:scaleType="centerCrop"
            android:src="@drawable/mark_ruffalo"

            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/chris_hemsworth_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/chris_evans_image"
            app:layout_constraintTop_toBottomOf="@+id/cast_name"
            tools:srcCompat="@drawable/mark_ruffalo" />

        <ImageView
            android:id="@+id/chris_hemsworth_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/chris_hemsworth"
            android:scaleType="centerCrop"
            android:src="@drawable/chris_hemsworth"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mark_ruffalo_image"
            app:layout_constraintTop_toBottomOf="@+id/cast_name"
            tools:srcCompat="@drawable/chris_hemsworth" />

        <TextView
            android:id="@+id/r_downey_jr_name"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            android:text="@string/r_downey_jr"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/chris_evans_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/robert_down_image" />

        <TextView
            android:id="@+id/chris_evans_name"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/chris_evans"

            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/mark_ruffalo_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/r_downey_jr_name"
            app:layout_constraintTop_toBottomOf="@id/chris_evans_image" />

        <TextView
            android:id="@+id/mark_ruffalo_name"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            android:text="@string/mark_ruffalo"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/chris_hemsworth_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/chris_evans_name"
            app:layout_constraintTop_toBottomOf="@id/mark_ruffalo_image" />

        <TextView
            android:id="@+id/chris_hemsworth_name"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            android:text="@string/chris_hemsworth"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mark_ruffalo_name"
            app:layout_constraintTop_toBottomOf="@id/chris_hemsworth_image" />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/material_on_background_disabled"
            android:drawableLeft="@drawable/ic_back"
            android:text="@string/back"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/mask" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>