<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vh_movie"
    android:layout_width="170dp"
    android:layout_height="296dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_margin="8dp"
    android:background="@drawable/activity_main_movie_background"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="parent">

    <ImageView
        android:id="@+id/activity_main_movie_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/avengers_end_game"
        android:scaleType="centerCrop"
        android:background="@drawable/activity_main_movie_mask"
        tools:src="@drawable/avengers_end_game_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/activity_main_movie_detail_mask"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/activity_main_movie_mask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:alpha="0.9"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_main_ratio"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/ratio_13plus"
        android:textAppearance="@style/activity_main_ratio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/activity_main_like"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:contentDescription="@string/like"
        android:src="@drawable/ic_heart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/activity_main_tag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:lineSpacingExtra="3sp"
        android:text="@string/action_adventure_fantasy"
        android:textAppearance="@style/activity_main_tag"
        app:layout_constraintBottom_toTopOf="@id/activity_main_ratingBar"
        app:layout_constraintStart_toStartOf="parent" />

    <RatingBar
        android:id="@+id/activity_main_ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="4"
        android:stepSize="1"
        android:theme="@style/ratingBar"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_movie_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/activity_main_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="3sp"
        android:text="@string/_125_reviews"
        android:textAppearance="@style/activity_main_review"
        app:layout_constraintBottom_toTopOf="@id/activity_main_movie_name"
        app:layout_constraintStart_toEndOf="@id/activity_main_ratingBar" />

    <TextView
        android:id="@+id/activity_main_movie_name"
        style="avengers_end_game_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:lineSpacingExtra="4sp"
        android:layout_marginBottom="4dp"
        android:text="@string/avengers_end_game"
        android:textAppearance="@style/activity_main_movie_name"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activity_main_duration" />

    <TextView
        android:id="@+id/activity_main_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="3sp"
        android:text="@string/min"
        android:textAppearance="@style/activity_main_duration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>